# Laboratory_work_5b

./: .gitignore  CMakeLists.txt  README.md  function_for_tasks.c  main.c  test.c
includes/: CMakeLists.txt
includes/algorithms/: CMakeLists.txt  array.c  array.h  matrix.c  matrix.h  sorts.c  sorts.h
includes/structs/: CMakeLists.txt  matrix.c
